welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:24: error: not found: value faireV
	faireV()
        ^